[package]
name = "anthropic-ox"
version = "0.1.0"
edition = "2021"

[features]
default = ["leaky-bucket"]
leaky-bucket = ["dep:leaky-bucket"]

[dependencies]
reqwest = { version = "0.11.20", default-features = false, features = [
  "json",
  "rustls",
  "rustls-tls",
  "stream",
  "multipart",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
thiserror = "1.0.43"
leaky-bucket = { version = "1.0.1", optional = true }
async-trait = "0.1.72"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
reqwest-eventsource = "0.5.0"
derivative = "2.2.0"
cfg-if = "1.0.0"
