[package]
name = "anthropic-ox"
version = "0.1.0"
edition = "2021"

[features]
default = ["leaky-bucket"]
leaky-bucket = ["dep:leaky-bucket"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "charset",
  "json",
  "rustls-tls",
  "stream",
  "multipart",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
leaky-bucket = { version = "1.0", optional = true }
async-trait = "0.1.80"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
reqwest-eventsource = "0.6"
derivative = "2.2"
cfg-if = "1.0.0"
regex = "1.10.4"
schemars = "0.8.16"
strum = { version = "0.26.2", features = ["derive"] }
base64 = "0.22.1"
mime_guess = "2.0.4"
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
rustc-hash = "2.0.0"
